[project]
name = "mtflow"
version = "0.0.1.dev2"
description = "Machine Trading Lifecycle"
license = "Apache-2.0"
authors = [
    { name="Stephen Yau", email="softwareentrepreneer+mtflow@gmail.com" }
]
readme = "README.md"
keywords = []
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfeed>=0.0.5",
    "apscheduler>=3.11.0",
    "ipython>=8.23.0",
    "gitpython>=3.1.44",
    "joblib>=1.4.2",
    "mlflow>=2.21.3",
    "optuna>=4.2.1",
]

[project.optional-dependencies]
core = [
    "litestar[standard]>=2.16.0",
    "pfeed[core]>=0.0.5",
    "psutil>=7.0.0",
    # TEMP: to be removed after experiments
    "wandb>=0.19.9",
    "deepeval>=2.6.5",
    # "evidently>=0.7.0",
    # "langfuse>=2.60.2",
    # "agentops "
    "unitycatalog-ai>=0.3.0",
    "unitycatalog-client>=0.2.1",
    "weave>=0.51.41",
]

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/mtflow"
documentation = "https://mtflow-docs.pfund.ai"

[tool.uv.sources]
pfund = { path = "../pfund", editable = true }
pfeed = { path = "../pfeed", editable = true }
pfolio = { path = "../pfolio", editable = true }
pfund-plot = { path = "../pfund-plot", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ['/mtflow', 'docker-compose.yml']

[tool.hatch.build.targets.wheel]
include = ['/mtflow', 'docker-compose.yml']
