[project]
name = "mtflow"
version = "0.0.1.dev2"
description = "Machine Trading Lifecycle"
license = "Apache-2.0"
authors = [
    { name="Stephen Yau", email="softwareentrepreneer+mtflow@gmail.com" }
]
readme = "README.md"
keywords = []
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "pfund-kit>=0.1.2",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "logfire>=4.21.0",
    "litestar[standard]>=2.19.0",
    "websockets>=15.0.1",
    "psutil>=7.2.2",
    "apscheduler>=3.11.2",
    "joblib>=1.5.3",
    "ipython>=9.9.0",
    "gitpython>=3.1.46",
]

[project.optional-dependencies]
# telegram = ["python-telegram-bot>=22.3.0"]

[project.scripts]
mtflow = "mtflow.__main__:run_cli"

[project.entry-points."pfund_shell.commands"]
mtflow = "mtflow.cli:mtflow_group"

[project.urls]
homepage = "https://pfund.ai"
repository = "https://github.com/PFund-Software-Ltd/mtflow"
documentation = "https://mtflow-docs.pfund.ai"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mtflow"
module-root = ""